Fix My Collections view being too close to header

--- a/src/css/components/_header-nav.scss
+++ b/src/css/components/_header-nav.scss
@@ -1,4 +1,5 @@
 .header-nav-wrapper {
+  margin: 0 0 15px;
   position: fixed;
   z-index: $z-nav;
   background-color: $turquoise;
